--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=none
 
+# App Properties
+taskman.app.jwtSecret= bezKoderSecretKey
+taskman.app.jwtExpirationMs= 86400000
